# pykotor

./: .cursorignore  .cursorrules  .env  .gh-issue-47-comment.md  .gitignore  .gitmodules  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  203tel.wok.ascii  AGENTS.md  CONTRIBUTING.md  CONVENTIONS.md  DOCUMENTATION_INDEX.md  HolocronToolset.code-workspace  MANIFEST.in  NEW_FEATURES_GUIDE.md  README.md  README_TOOLSET_INTEGRATION.md  STRATEGY.md  agentdecompile-http-transport-fix.patch  build_backend.py  bwm_mdl_lyt_kotormax_context.md  compound-engineering.local.md  install_powershell.sh  install_python_venv.ps1  out.diagram  pyproject.toml  requirements-dev-exp.txt  requirements-dev.txt  run_tests_with_timeout.ps1  setup.py  sitecustomize.py  tmp_mirror_audit.py  tmp_wiki_audit.py  tool_metadata.py
Libraries/PyKotor/: .gitignore  CLI_COMMANDS_REFERENCE.md  CLI_QUICKSTART.md  CLI_README.md  README.md  pyproject.toml  requirements.txt  setup.py
Libraries/PyKotor/.github/workflows/: ci.yml  release.yml
Libraries/PyKotor/Game Engine/: ENGINE_ROADMAP.md  pyproject.toml  setup.py
Libraries/PyKotor/Game Engine/examples/: simple_viewer.py
Libraries/PyKotor/docs/: CHANGELOG.md  CLI_COMMANDS_REFERENCE.md  GFF_DIFF_SEMANTICS.md  PYKOTOR_INTEGRATION.md  QUICKSTART.md  README.md  REVA_GENERICS_RESEARCH_CHECKLIST.md  SUMMARY.md  VERIFICATION.md
Libraries/PyKotor/pykotor/toolset/: __init__.py  base.py  texture_batch.py
Libraries/PyKotor/src/loggerplus/: __init__.py  __main__.py
Libraries/PyKotor/src/pykotor/: __init__.py
Libraries/PyKotor/src/utility/: error_handling.py  fonts.py  misc.py  string_util.py  tricks.py
Libraries/PyKotor/tests/: _fake_install.py  conftest.py  test_area_layout.py  test_area_layout_compile.py  test_compile_tool.py  test_finder.py  test_formats_package_init.py  test_indoorkit_case_path.py  test_kaitai_generated_parity.py  test_markdown_validation.py  test_merge_conflict_policy_normalize.py  test_path_safety.py  test_resource_json_deserialize.py  test_resource_json_export_progress.py  test_resource_json_progress.py  test_resource_json_progress_regressions.py  test_tilekit_v2.py  test_tools_creature.py  test_validation.py
Libraries/PyKotor/tests/cli/: conftest.py  test_cli_backwards_compat.py  test_diff_cli_utils.py  test_diff_command.py  test_diff_comprehensive.py  test_indoor_extract_installation_modules.py  test_indoor_kit_migrate_cli.py  test_indoor_roundtrip.py  test_json_commands.py  test_resource_json_progress.py  test_texture_convert.py  test_walkmesh_rebuild.py
Libraries/PyKotor/tests/common/: linux_case_insensitive_helpers.py  pytest_stream.py  test_case_aware_consumers.py  test_case_aware_path.py  test_case_aware_path_cache.py  test_caseawarepath_globber_bug.py  test_consumer_manager.py  test_decode_fallbacks.py  test_diff_cli_utils.py  test_geometry.py  test_get_case_sensitive_path.py  test_is_kotor_install_dir.py  test_kotor_install_detection.py  test_path_extras.py  test_path_isinstance.py  test_path_mixed_slash_handling.py  test_stream.py  test_wrapped_case_insens_str.py  test_wrapped_str.py  test_wrapped_str2.py  validate_case_sensitivity.py
Libraries/PyKotor/tests/diff_tool/: test_cli_utils.py  test_merge_helpers.py  test_merge_normalize_scripts.py  test_merge_policy.py
Libraries/PyKotor/tests/extract/: test_capsule.py  test_chitin.py  test_heuristics.py  test_installation.py  test_nested_capsule.py  test_path_source.py  test_save_load_flow_k1.py  test_talktable.py  test_textures.py
Libraries/PyKotor/tests/font/: test_txi_tga_font.py
Libraries/PyKotor/tests/gl/: bench_round6.py  test_async_loader_texture_txi_none.py  test_camera_angle_wrap.py  test_camera_angle_wrapping.py  test_camera_controller.py  test_camera_rotate.py  test_camera_rotate_wrap.py  test_frustum_culling.py  test_gl_accel.py  test_mdl_mesh_alpha_modes.py  test_scene_select.py  test_texture_loader_core.py
Libraries/PyKotor/tests/resource/: test_gff_dispatch.py  test_replace_module_extensions.py  test_resource_from_path.py  test_resource_json_ci_progress.py  test_resource_json_export_progress.py
Libraries/PyKotor/tests/test_engine/: __init__.py  test_gui.py  test_mdl_loader.py
Libraries/PyKotor/tests/test_files/: append.tlk  k_sup_galaxymap_test.ncs
Libraries/PyKotor/tests/test_helpers/: __init__.py  profiling_and_timeout.py
Libraries/PyKotor/tests/test_tools/: test_resource_json_progress.py
Libraries/PyKotor/tests/test_utility/: QFILEDIALOG_TEST_COVERAGE_ANALYSIS.md  conftest.py  test_actions_dispatcher.py  test_actions_executor_strict_typing.py  test_drag_drop_conformance.py  test_dynamic_view.py  test_enum_handling.py  test_explorer_widget_components.py  test_file_dialog_components.py  test_filesystem_components.py  test_fluent_design_conformance.py  test_keyboard_accessibility_conformance.py  test_local_verify_checkpoint.py  test_mutable_str_strict_typing.py  test_pixel_perfect_layout.py  test_pyfileinfogatherer.py  test_qfiledialog.py  test_qfiledialog2.py  test_qfiledialog_smoke.py  test_qfiledialogextended.py  test_qfiledialogextended_comprehensive.py  test_registry_strict_typing.py  test_sys_attributes_strict_typing.py  test_tasks.py  (+3 more)
Libraries/bioware-kaitai-formats/: README.md  pyproject.toml
Libraries/bioware-kaitai-formats/docs/: wire-enum-roadmap.md
Libraries/bioware-kaitai-formats/scripts/: postprocess_generated.py  regenerate_python.py
Libraries/bioware-kaitai-formats/tests/: test_import_all_modules.py
Tools/BatchPatcher/: pyproject.toml  requirements.txt  setup.py
Tools/HoloPatcher/: pyproject.toml  setup.py
Tools/HolocronToolset/: .gitignore  build_backend.py  pyproject.toml  requirements.txt  setup.py
Tools/HolocronToolset/src/: resources_rc.py
Tools/HolocronToolset/tests/: conftest.py  test_editor_find_references.py  test_filesystem_view.py  test_optional_imports.py  test_reference_finder.py  test_ui_dialogs_extra.py  test_ui_main.py  test_ui_search.py  test_ui_settings.py
Tools/KitGenerator/: pyproject.toml  requirements.txt  setup.py
Tools/KotorDiff/: README.md  pyproject.toml  setup.py
(+2522 files in other folders)
