[build-system]                                                                                                                              
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=67.8.0",
  "wheel"
]

[dependency-groups]
dev = [
    "pytest-qt>=4.4.0",
    "pytest-timeout>=2.4.0",
]

# Pin PyQt5-Qt5 to a version that has Windows wheels (5.15.11+ dropped win). Required for Python 3.8.
[tool.uv]
override-dependencies = [
  "pyqt5-qt5>=5.15.2,<5.15.11",
]

[project]
name = "pykotor-workspace"
authors = [{ name = "Nick Hugi" }, { name = "th3w1zard1" }]
maintainers = [{ name = "th3w1zard1", email = "boden.crouch@gmail.com" }]
dependencies = [
  "pykotor[render]>=2.3.11",
  "holocrontoolset",
  "numpy>=1.24.4",
  "matplotlib>=3.7.5",
]
description = "PyKotor workspace - meta-package for PyKotor ecosystem"
keywords = ["editor", "holocron", "holopatcher", "kotor", "library", "pykotor", "toolset", "tslpatcher"]
license = {text = "LGPL-3.0-or-later License"}
readme = {content-type = "text/markdown", file = "README.md"}
requires-python = ">=3.8"
version = "2.3.5"

[project.scripts]
batch_patcher = "batchpatcher.__main__:main"
batch-patcher = "batchpatcher.__main__:main"
batchpatcher = "batchpatcher.__main__:main"
holopazaak = "holopazaak.__main__:main"
holo_pazaak = "holopazaak.__main__:main"
holo-pazaak = "holopazaak.__main__:main"
holopatcher = "holopatcher.__main__:main"
holo_patcher = "holopatcher.__main__:main"
holo-patcher = "holopatcher.__main__:main"
kotordiff = "kotordiff.__main__:main"
kotor_diff = "kotordiff.__main__:main"
kotor-diff = "kotordiff.__main__:main"
kotor_mcp = "kotormcp.__main__:main"
kotor-mcp = "kotormcp.__main__:main"
kotormcp = "kotormcp.__main__:main"
holocrontoolset = "toolset.__main__:main"
holocron_toolset = "toolset.__main__:main"
holocron-toolset = "toolset.__main__:main"
toolset = "toolset.__main__:main"
kotor-editor = "toolset.gui.editors.standalone:main"
kotor-module-designer = "toolset.gui.editors.standalone:launch_module_designer"
module-designer = "toolset.gui.editors.standalone:launch_module_designer"
module_designer = "toolset.gui.editors.standalone:launch_module_designer"
moduledesigner = "toolset.gui.editors.standalone:launch_module_designer"
kotor-indoor-builder = "toolset.gui.editors.standalone:launch_indoor_builder"
indoor-builder = "toolset.gui.editors.standalone:launch_indoor_builder"
indoor_builder = "toolset.gui.editors.standalone:launch_indoor_builder"
indoorbuilder = "toolset.gui.editors.standalone:launch_indoor_builder"
kotor-2da-editor = "toolset.gui.editors.standalone:launch_twoda"
kotor-are-editor = "toolset.gui.editors.standalone:launch_are"
are-editor = "toolset.gui.editors.standalone:launch_are"
are_editor = "toolset.gui.editors.standalone:launch_are"
areeditor = "toolset.gui.editors.standalone:launch_are"
kotor-bwm-editor = "toolset.gui.editors.standalone:launch_bwm"
bwm-editor = "toolset.gui.editors.standalone:launch_bwm"
bwm_editor = "toolset.gui.editors.standalone:launch_bwm"
bwmeditor = "toolset.gui.editors.standalone:launch_bwm"
kotor-dlg-editor = "toolset.gui.editors.standalone:launch_dlg"
dlg-editor = "toolset.gui.editors.standalone:launch_dlg"
dlg_editor = "toolset.gui.editors.standalone:launch_dlg"
dlgeditor = "toolset.gui.editors.standalone:launch_dlg"
kotor-erf-editor = "toolset.gui.editors.standalone:launch_erf"
erf-editor = "toolset.gui.editors.standalone:launch_erf"
erf_editor = "toolset.gui.editors.standalone:launch_erf"
erfeditor = "toolset.gui.editors.standalone:launch_erf"
kotor-gff-editor = "toolset.gui.editors.standalone:launch_gff"
gff-editor = "toolset.gui.editors.standalone:launch_gff"
gff_editor = "toolset.gui.editors.standalone:launch_gff"
gffeditor = "toolset.gui.editors.standalone:launch_gff"
kotor-git-editor = "toolset.gui.editors.standalone:launch_git"
git-editor = "toolset.gui.editors.standalone:launch_git"
git_editor = "toolset.gui.editors.standalone:launch_git"
giteditor = "toolset.gui.editors.standalone:launch_git"
kotor-ifo-editor = "toolset.gui.editors.standalone:launch_ifo"
ifo-editor = "toolset.gui.editors.standalone:launch_ifo"
ifo_editor = "toolset.gui.editors.standalone:launch_ifo"
ifoeditor = "toolset.gui.editors.standalone:launch_ifo"
kotor-jrl-editor = "toolset.gui.editors.standalone:launch_jrl"
jrl-editor = "toolset.gui.editors.standalone:launch_jrl"
jrl_editor = "toolset.gui.editors.standalone:launch_jrl"
jrleditor = "toolset.gui.editors.standalone:launch_jrl"
kotor-lip-editor = "toolset.gui.editors.standalone:launch_lip"
lip-editor = "toolset.gui.editors.standalone:launch_lip"
lip_editor = "toolset.gui.editors.standalone:launch_lip"
lipeditor = "toolset.gui.editors.standalone:launch_lip"
kotor-mdl-editor = "toolset.gui.editors.standalone:launch_mdl"
mdl-editor = "toolset.gui.editors.standalone:launch_mdl"
mdl_editor = "toolset.gui.editors.standalone:launch_mdl"
mdleditor = "toolset.gui.editors.standalone:launch_mdl"
kotor-nss-editor = "toolset.gui.editors.standalone:launch_nss"
nss-editor = "toolset.gui.editors.standalone:launch_nss"
nss_editor = "toolset.gui.editors.standalone:launch_nss"
nsseditor = "toolset.gui.editors.standalone:launch_nss"
kotor-pth-editor = "toolset.gui.editors.standalone:launch_pth"
pth-editor = "toolset.gui.editors.standalone:launch_pth"
pth_editor = "toolset.gui.editors.standalone:launch_pth"
ptheditor = "toolset.gui.editors.standalone:launch_pth"
kotor-savegame-editor = "toolset.gui.editors.standalone:launch_savegame"
savegame-editor = "toolset.gui.editors.standalone:launch_savegame"
savegame_editor = "toolset.gui.editors.standalone:launch_savegame"
savegameeditor = "toolset.gui.editors.standalone:launch_savegame"
kotor-ssf-editor = "toolset.gui.editors.standalone:launch_ssf"
ssf-editor = "toolset.gui.editors.standalone:launch_ssf"
ssf_editor = "toolset.gui.editors.standalone:launch_ssf"
ssfeditor = "toolset.gui.editors.standalone:launch_ssf"
kotor-tlk-editor = "toolset.gui.editors.standalone:launch_tlk"
tlk-editor = "toolset.gui.editors.standalone:launch_tlk"
tlk_editor = "toolset.gui.editors.standalone:launch_tlk"
tlkeditor = "toolset.gui.editors.standalone:launch_tlk"
kotor-tpc-editor = "toolset.gui.editors.standalone:launch_tpc"
tpc-editor = "toolset.gui.editors.standalone:launch_tpc"
tpc_editor = "toolset.gui.editors.standalone:launch_tpc"
tpceditor = "toolset.gui.editors.standalone:launch_tpc"
kotor-txt-editor = "toolset.gui.editors.standalone:launch_txt"
txt-editor = "toolset.gui.editors.standalone:launch_txt"
txt_editor = "toolset.gui.editors.standalone:launch_txt"
txteditor = "toolset.gui.editors.standalone:launch_txt"
kotor-utc-editor = "toolset.gui.editors.standalone:launch_utc"
utc-editor = "toolset.gui.editors.standalone:launch_utc"
utc_editor = "toolset.gui.editors.standalone:launch_utc"
utceditor = "toolset.gui.editors.standalone:launch_utc"
kotor-utd-editor = "toolset.gui.editors.standalone:launch_utd"
utd-editor = "toolset.gui.editors.standalone:launch_utd"
utd_editor = "toolset.gui.editors.standalone:launch_utd"
utdeditor = "toolset.gui.editors.standalone:launch_utd"
kotor-ute-editor = "toolset.gui.editors.standalone:launch_ute"
ute-editor = "toolset.gui.editors.standalone:launch_ute"
ute_editor = "toolset.gui.editors.standalone:launch_ute"
uteeditor = "toolset.gui.editors.standalone:launch_ute"
kotor-uti-editor = "toolset.gui.editors.standalone:launch_uti"
uti-editor = "toolset.gui.editors.standalone:launch_uti"
uti_editor = "toolset.gui.editors.standalone:launch_uti"
utieditor = "toolset.gui.editors.standalone:launch_uti"
kotor-utm-editor = "toolset.gui.editors.standalone:launch_utm"
utm-editor = "toolset.gui.editors.standalone:launch_utm"
utm_editor = "toolset.gui.editors.standalone:launch_utm"
utmeditor = "toolset.gui.editors.standalone:launch_utm"
kotor-utp-editor = "toolset.gui.editors.standalone:launch_utp"
utp-editor = "toolset.gui.editors.standalone:launch_utp"
utp_editor = "toolset.gui.editors.standalone:launch_utp"
utpeditor = "toolset.gui.editors.standalone:launch_utp"
kotor-uts-editor = "toolset.gui.editors.standalone:launch_uts"
uts-editor = "toolset.gui.editors.standalone:launch_uts"
uts_editor = "toolset.gui.editors.standalone:launch_uts"
utseditor = "toolset.gui.editors.standalone:launch_uts"
kotor-utt-editor = "toolset.gui.editors.standalone:launch_utt"
utt-editor = "toolset.gui.editors.standalone:launch_utt"
utt_editor = "toolset.gui.editors.standalone:launch_utt"
utteditor = "toolset.gui.editors.standalone:launch_utt"
kotor-utw-editor = "toolset.gui.editors.standalone:launch_utw"
utw-editor = "toolset.gui.editors.standalone:launch_utw"
utw_editor = "toolset.gui.editors.standalone:launch_utw"
utweditor = "toolset.gui.editors.standalone:launch_utw"
kotor-wav-editor = "toolset.gui.editors.standalone:launch_wav"
wav-editor = "toolset.gui.editors.standalone:launch_wav"
wav_editor = "toolset.gui.editors.standalone:launch_wav"
waveditor = "toolset.gui.editors.standalone:launch_wav"
pykotor = "pykotor.cli.__main__:main"
pykotorcli = "pykotor.cli.__main__:main"


[project.urls]
documentation = "https://github.com/OldRepublicDevs/PyKotor/blob/master/README.md"
homepage = "https://github.com/OldRepublicDevs/PyKotor"
issues = "https://github.com/OldRepublicDevs/PyKotor/issues"
repository = "https://github.com/OldRepublicDevs/PyKotor.git"
#Changelog = "https://github.com/OldRepublicDevs/PyKotor/blob/master/CHANGELOG.md"

[tool.poetry]
name = "pykotor-workspace"
version = "2.3.5"
description = "PyKotor workspace - meta-package for PyKotor ecosystem"
authors = ["Nick Hugi", "th3w1zard1 <boden.crouch@gmail.com>"]
maintainers = ["th3w1zard1 <boden.crouch@gmail.com>"]
readme = "README.md"
license = "LGPL-3.0-or-later"
keywords = ["editor", "holocron", "holopatcher", "kotor", "library", "pykotor", "toolset", "tslpatcher"]

[tool.poetry.dependencies]
python = "^3.8"
pykotor = "^2.3.11"

[tool.poetry.scripts]
batch_patcher = "batchpatcher.__main__:main"
batch-patcher = "batchpatcher.__main__:main"
batchpatcher = "batchpatcher.__main__:main"
holopazaak = "holopazaak.__main__:main"
holo_pazaak = "holopazaak.__main__:main"
holo-pazaak = "holopazaak.__main__:main"
holopatcher = "holopatcher.__main__:main"
holo_patcher = "holopatcher.__main__:main"
holo-patcher = "holopatcher.__main__:main"
kotordiff = "kotordiff.__main__:main"
kotor_diff = "kotordiff.__main__:main"
kotor-diff = "kotordiff.__main__:main"
kotor_mcp = "kotormcp.__main__:main"
kotor-mcp = "kotormcp.__main__:main"
kotormcp = "kotormcp.__main__:main"
holocrontoolset = "toolset.__main__:main"
holocron_toolset = "toolset.__main__:main"
holocron-toolset = "toolset.__main__:main"
toolset = "toolset.__main__:main"
kotor-editor = "toolset.gui.editors.standalone:main"
kotor-module-designer = "toolset.gui.editors.standalone:launch_module_designer"
module-designer = "toolset.gui.editors.standalone:launch_module_designer"
module_designer = "toolset.gui.editors.standalone:launch_module_designer"
moduledesigner = "toolset.gui.editors.standalone:launch_module_designer"
kotor-indoor-builder = "toolset.gui.editors.standalone:launch_indoor_builder"
indoor-builder = "toolset.gui.editors.standalone:launch_indoor_builder"
indoor_builder = "toolset.gui.editors.standalone:launch_indoor_builder"
indoorbuilder = "toolset.gui.editors.standalone:launch_indoor_builder"
kotor-2da-editor = "toolset.gui.editors.standalone:launch_twoda"
kotor-are-editor = "toolset.gui.editors.standalone:launch_are"
are-editor = "toolset.gui.editors.standalone:launch_are"
are_editor = "toolset.gui.editors.standalone:launch_are"
areeditor = "toolset.gui.editors.standalone:launch_are"
kotor-bwm-editor = "toolset.gui.editors.standalone:launch_bwm"
bwm-editor = "toolset.gui.editors.standalone:launch_bwm"
bwm_editor = "toolset.gui.editors.standalone:launch_bwm"
bwmeditor = "toolset.gui.editors.standalone:launch_bwm"
kotor-dlg-editor = "toolset.gui.editors.standalone:launch_dlg"
dlg-editor = "toolset.gui.editors.standalone:launch_dlg"
dlg_editor = "toolset.gui.editors.standalone:launch_dlg"
dlgeditor = "toolset.gui.editors.standalone:launch_dlg"
kotor-erf-editor = "toolset.gui.editors.standalone:launch_erf"
erf-editor = "toolset.gui.editors.standalone:launch_erf"
erf_editor = "toolset.gui.editors.standalone:launch_erf"
erfeditor = "toolset.gui.editors.standalone:launch_erf"
kotor-gff-editor = "toolset.gui.editors.standalone:launch_gff"
gff-editor = "toolset.gui.editors.standalone:launch_gff"
gff_editor = "toolset.gui.editors.standalone:launch_gff"
gffeditor = "toolset.gui.editors.standalone:launch_gff"
kotor-git-editor = "toolset.gui.editors.standalone:launch_git"
git-editor = "toolset.gui.editors.standalone:launch_git"
git_editor = "toolset.gui.editors.standalone:launch_git"
giteditor = "toolset.gui.editors.standalone:launch_git"
kotor-ifo-editor = "toolset.gui.editors.standalone:launch_ifo"
ifo-editor = "toolset.gui.editors.standalone:launch_ifo"
ifo_editor = "toolset.gui.editors.standalone:launch_ifo"
ifoeditor = "toolset.gui.editors.standalone:launch_ifo"
kotor-jrl-editor = "toolset.gui.editors.standalone:launch_jrl"
jrl-editor = "toolset.gui.editors.standalone:launch_jrl"
jrl_editor = "toolset.gui.editors.standalone:launch_jrl"
jrleditor = "toolset.gui.editors.standalone:launch_jrl"
kotor-lip-editor = "toolset.gui.editors.standalone:launch_lip"
lip-editor = "toolset.gui.editors.standalone:launch_lip"
lip_editor = "toolset.gui.editors.standalone:launch_lip"
lipeditor = "toolset.gui.editors.standalone:launch_lip"
kotor-mdl-editor = "toolset.gui.editors.standalone:launch_mdl"
mdl-editor = "toolset.gui.editors.standalone:launch_mdl"
mdl_editor = "toolset.gui.editors.standalone:launch_mdl"
mdleditor = "toolset.gui.editors.standalone:launch_mdl"
kotor-nss-editor = "toolset.gui.editors.standalone:launch_nss"
nss-editor = "toolset.gui.editors.standalone:launch_nss"
nss_editor = "toolset.gui.editors.standalone:launch_nss"
nsseditor = "toolset.gui.editors.standalone:launch_nss"
kotor-pth-editor = "toolset.gui.editors.standalone:launch_pth"
pth-editor = "toolset.gui.editors.standalone:launch_pth"
pth_editor = "toolset.gui.editors.standalone:launch_pth"
ptheditor = "toolset.gui.editors.standalone:launch_pth"
kotor-savegame-editor = "toolset.gui.editors.standalone:launch_savegame"
savegame-editor = "toolset.gui.editors.standalone:launch_savegame"
savegame_editor = "toolset.gui.editors.standalone:launch_savegame"
savegameeditor = "toolset.gui.editors.standalone:launch_savegame"
kotor-ssf-editor = "toolset.gui.editors.standalone:launch_ssf"
ssf-editor = "toolset.gui.editors.standalone:launch_ssf"
ssf_editor = "toolset.gui.editors.standalone:launch_ssf"
ssfeditor = "toolset.gui.editors.standalone:launch_ssf"
kotor-tlk-editor = "toolset.gui.editors.standalone:launch_tlk"
tlk-editor = "toolset.gui.editors.standalone:launch_tlk"
tlk_editor = "toolset.gui.editors.standalone:launch_tlk"
tlkeditor = "toolset.gui.editors.standalone:launch_tlk"
kotor-tpc-editor = "toolset.gui.editors.standalone:launch_tpc"
tpc-editor = "toolset.gui.editors.standalone:launch_tpc"
tpc_editor = "toolset.gui.editors.standalone:launch_tpc"
tpceditor = "toolset.gui.editors.standalone:launch_tpc"
kotor-txt-editor = "toolset.gui.editors.standalone:launch_txt"
txt-editor = "toolset.gui.editors.standalone:launch_txt"
txt_editor = "toolset.gui.editors.standalone:launch_txt"
txteditor = "toolset.gui.editors.standalone:launch_txt"
kotor-utc-editor = "toolset.gui.editors.standalone:launch_utc"
utc-editor = "toolset.gui.editors.standalone:launch_utc"
utc_editor = "toolset.gui.editors.standalone:launch_utc"
utceditor = "toolset.gui.editors.standalone:launch_utc"
kotor-utd-editor = "toolset.gui.editors.standalone:launch_utd"
utd-editor = "toolset.gui.editors.standalone:launch_utd"
utd_editor = "toolset.gui.editors.standalone:launch_utd"
utdeditor = "toolset.gui.editors.standalone:launch_utd"
kotor-ute-editor = "toolset.gui.editors.standalone:launch_ute"
ute-editor = "toolset.gui.editors.standalone:launch_ute"
ute_editor = "toolset.gui.editors.standalone:launch_ute"
uteeditor = "toolset.gui.editors.standalone:launch_ute"
kotor-uti-editor = "toolset.gui.editors.standalone:launch_uti"
uti-editor = "toolset.gui.editors.standalone:launch_uti"
uti_editor = "toolset.gui.editors.standalone:launch_uti"
utieditor = "toolset.gui.editors.standalone:launch_uti"
kotor-utm-editor = "toolset.gui.editors.standalone:launch_utm"
utm-editor = "toolset.gui.editors.standalone:launch_utm"
utm_editor = "toolset.gui.editors.standalone:launch_utm"
utmeditor = "toolset.gui.editors.standalone:launch_utm"
kotor-utp-editor = "toolset.gui.editors.standalone:launch_utp"
utp-editor = "toolset.gui.editors.standalone:launch_utp"
utp_editor = "toolset.gui.editors.standalone:launch_utp"
utpeditor = "toolset.gui.editors.standalone:launch_utp"
kotor-uts-editor = "toolset.gui.editors.standalone:launch_uts"
uts-editor = "toolset.gui.editors.standalone:launch_uts"
uts_editor = "toolset.gui.editors.standalone:launch_uts"
utseditor = "toolset.gui.editors.standalone:launch_uts"
kotor-utt-editor = "toolset.gui.editors.standalone:launch_utt"
utt-editor = "toolset.gui.editors.standalone:launch_utt"
utt_editor = "toolset.gui.editors.standalone:launch_utt"
utteditor = "toolset.gui.editors.standalone:launch_utt"
kotor-utw-editor = "toolset.gui.editors.standalone:launch_utw"
utw-editor = "toolset.gui.editors.standalone:launch_utw"
utw_editor = "toolset.gui.editors.standalone:launch_utw"
utweditor = "toolset.gui.editors.standalone:launch_utw"
kotor-wav-editor = "toolset.gui.editors.standalone:launch_wav"
wav-editor = "toolset.gui.editors.standalone:launch_wav"
wav_editor = "toolset.gui.editors.standalone:launch_wav"
waveditor = "toolset.gui.editors.standalone:launch_wav"
pykotor = "pykotor.cli.__main__:main"
pykotorcli = "pykotor.cli.__main__:main"

[tool.poetry.urls]
Documentation = "https://github.com/OldRepublicDevs/PyKotor/blob/master/README.md"
Homepage = "https://github.com/OldRepublicDevs/PyKotor"
Repository = "https://github.com/OldRepublicDevs/PyKotor.git"
Issues = "https://github.com/OldRepublicDevs/PyKotor/issues"

[tool.uv.sources]
# Use workspace members instead of PyPI
batchpatcher = {workspace = true}
holocrontoolset = {workspace = true}
holopatcher = {workspace = true}
holopazaak = {workspace = true}
kotordiff = {workspace = true}
pykotorcli = {workspace = true}
pykotor = { workspace = true }
bioware-kaitai-formats = { workspace = true }

[tool.uv.workspace]
members = [
  "Libraries/PyKotor",
  "Libraries/bioware-kaitai-formats",
  "Tools/BatchPatcher",
  "Tools/HoloPatcher",
  "Tools/HoloPazaak",
  "Tools/HolocronToolset",
  "Tools/KotorDiff"
]


########################################################
## define only linter configurations below this point ##
########################################################

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B601"]
tests = ["B201", "B301"]

[tool.black]
exclude = '''
/(
    \.git
| \.hg
| \.github
| \.mypy_cache
| \.tox
| \.venv
| venv
| _build
| buck-out
| build
| __pycache__
| dist
| nuitka_dist
| \.history
| \.idea
| \.chat
| \.ruff_cache
| \.trunk
| .mdx
| .mdl
)/
'''
include = '\.pyi?$'
line-length = 100
skip-magic-trailing-comma = false
target-version = ['py38']

[tool.isort]
atomic = true
line_length = 100
multi_line_output = 3
profile = "black"
skip_gitignore = true

[tool.mccabe]
max-complexity = 25

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = false
exclude = [
  "\\.mypy_cache",
  "\\.venv",
  "__pycache__",
  "build",
  "dist",
  "tests/results",
  "venv"
]
explicit_package_bases = true
mypy_path = [
  "Libraries/PyKotor/src",
  "Libraries/bioware-kaitai-formats/src",
  "Tools/BatchPatcher/src",
  "Tools/HoloPatcher/src",
  "Tools/HoloPazaak/src",
  "Tools/HolocronToolset/src",
  "Tools/KotorDiff/src",
  "tests"
]
namespace_packages = true
no_implicit_optional = true
python_version = "3.9"  # must be set to the minimum supported python version
warn_return_any = true
warn_unused_configs = true

[tool.pylintrc]
max-line-length = 100

[tool.pyright]
analyzeUnannotatedFunctions = true
deprecateTypingAliases = false
exclude = [
  "**/.*/**",
  "**/.venv/**",
  "**/__pycache__/**",
  "**/build/**",
  "**/dist/**",
  "**/node_modules/**",
  "**/vendor/**",
  "**/venv/**"
]
extraPaths = [
  "Libraries/PyKotor/src",
  "Tools/BatchPatcher/src",
  "Tools/HoloPatcher/src",
  "Tools/HoloPazaak/src",
  "Tools/HolocronToolset/src",
  "Tools/KotorDiff/src"
]
include = ["*.py"]
pythonVersion = "3.8"
reportMissingImports = true
reportMissingTypeStubs = false
typeCheckingMode = "basic"

[tool.pyright.defineConstant]
PYQT5 = false
PYQT6 = true
PYSIDE2 = false
PYSIDE6 = false

[tool.pytest.ini_options]
addopts = "-ra -q -m \"not slow\""
log_cli = true
log_cli_format = "%(message)s"
log_cli_level = "CRITICAL"
log_file = "pytest.log"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_level = "DEBUG"
markers = [
  "gui: marks tests that require a GUI (deselect with '-m \"not gui\"')",
  "slow: marks tests that are slow (deselect with '-m \"not slow\"')"
]
qt_api = "pyqt6" # Default, can be overridden by PYTEST_QT_API environment variable (moved to conftest.py)
testpaths = [
  "Libraries/PyKotor/tests",
  "Tools/HoloPatcher/tests",
  "Tools/HoloPazaak/tests",
  "Tools/HolocronToolset/tests",
  "Tools/KotorDiff/tests",
  "tests"
]
# Timeout configuration (pytest-timeout)
timeout = 120 # 2 minutes per test
timeout_method = "thread" # Use thread-based timeout (works on Windows)

[tool.ruff]
fix = true
force-exclude = true
line-length = 100
output-format = "grouped" # Group violations by containing file.
# Enable preview features.
preview = false
respect-gitignore = false
show-fixes = true
src = [
  "Libraries/PyKotor/src",
  "Tools/BatchPatcher/src",
  "Tools/HoloPatcher/src",
  "Tools/HoloPazaak/src",
  "Tools/HolocronToolset/src",
  "Tools/KotorDiff/src"
]

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
preview = false
skip-magic-trailing-comma = false

[tool.ruff.lint]
exclude = [".venv", ".venv*"]
external = ["V"]
ignore = [
  # The following rules are too strict to be realistically used by ruff:
  "ANN002", # Checks that function *args arguments have type annotations.
  "ANN003", # Checks that function **kwargs arguments have type annotations.
  "ANN101", # Checks that instance method self arguments have type annotations.
  "ANN102", # Checks that class method cls arguments have type annotations.
  "ANN204", # Missing return type annotation for special method
  "ANN401", # Dynamically typed expressions (typing.Any) are disallowed in {name}
  "ARG002", # Unused method argument: `method`
  "BLE001", # Do not catch blind exception: `Exception`
  "C901", # Function is too complex
  "COM812", # missing-trailing-comma
  "D100", # Missing docstring in public module
  "D101", # Missing docstring in public class
  "D102", # Missing docstring in public method
  "D103", # Missing docstring in public function
  "D104", # Missing docstring in public package
  "D105", # Missing docstring in magic method
  "D107", # Missing docstring in __init__
  "D205", # 1 blank line required between summary line and description
  "D401", # First line of docstring should be in imperative mood
  "D413", # Missing blank line after last section 'xyz'
  "D417", # Missing argument description in the docstring for {definition}: {name}
  # The following are currently violated by the codebase.
  # "D205",     # 1 blank line required between summary line and description
  "E402", # Module level import not at top of file
  "EM101", # Exception must not use a string literal, assign to variable first
  "EM102", # Exception must not use an f-string literal, assign to variable first
  "ERA001", # Found commented out code.
  "G004", # Logging statement uses f'' string.
  # "FIX004",   # Line contains HACK, consider resolving the issue
  # "PD901",    # df is a bad variable name. Be kinder to your future self.
  # "PLR2004",  # Magic value used in comparison, consider replacing X with a constant variable
  # "S101",     # Use of assert detected
  # "S314",     # Using `xml` to parse untrusted data is known to be vulnerable to XML attacks; use `defusedxml` equivalents
  # "S605",     # Starting a process with a shell, possible injection detected
  # "SLF001",   # Private member accessed
  #
  # According to ruff documentation, the following rules should be avoided when using its formatter:
  #
  # "W191",     # tab-indentation
  # "E111",     # indentation-with-invalid-multiple
  # "E114",     # indentation-with-invalid-multiple-comment
  # "E117",     # over-indented
  # "D206",     # indent-with-spaces
  # "D300",     # triple-single-quotes
  # "Q000",     # bad-quotes-inline-string
  # "Q001",     # bad-quotes-multiline-string
  # "Q002",     # bad-quotes-docstring
  # "Q003",     # avoidable-escaped-quote
  # "COM812",   # missing-trailing-comma
  # "COM819",   # prohibited-trailing-comma
  "ISC001",
  "N802", # Function name `screenToWorld` should be lowercase
  "N806", # Variable `jumpToOffset` in function should be lowercase
  "N815", # Variable `var` in class scope should not be mixedCase
  "PERF203", # `try`-`except` within a loop incurs performance overhead
  "PLC0415", # `import` should be at the top-level of a file
  "PLR0904", # Too many public methods
  "PLR0911", # Too many return statements
  "PLR0912", # Too many branches
  "PLR0913", # Too many arguments to function call (N > 5)
  "PLR0915", # Too many statements
  "PLR2004", # Magic value used in comparison, consider replacing X with a constant variable
  "RET504", # Unnecessary assignment to `varname` before `return` statement
  "RUF100", # Unused `noqa` directive (non-enabled: `PLC0415`)
  "S101", # Use of `assert` detected.
  "SIM108", # Use ternary operator instead of 'if' 'else' block
  "SIM114", # Combine `if` branches using logical `or` operator
  "T201", # 'print' detected
  "TD001", # Invalid TODO tag: `FIXME`
  "TRY003" # Avoid specifying long messages outside the exception class
]
task-tags = ["FIXME", "HACK", "TODO"]
unfixable = [
  "ERA001",
  "F841",
  "N815",
  "RUF100" # Unused `noqa` directive
]

[tool.ruff.lint.flake8-annotations]
ignore-fully-untyped = true
mypy-init-return = true
suppress-none-returning = true

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
parametrize-names-type = "list"
parametrize-values-row-type = "list"
parametrize-values-type = "list" # default
raises-require-match-for = ["requests.RequestException"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all" # Disallow all relative imports.

[tool.ruff.lint.flake8-type-checking]
exempt-modules = ["typing", "typing_extensions"]
# Add quotes around type annotations, if doing so would allow an import to be moved into a type-checking block.
quote-annotations = true # Does nothing when from __future__ import annotations is used
strict = true

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
force-wrap-aliases = false
lines-between-types = 1
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"*.pyi" = [
  "I002" # from __future__ import annotations
]
# "tests/*.py" = ["ALL"]
".github/*py" = ["INP001"]
".mdl" = ["ALL"]
".mdx" = ["ALL"]
"Tools/HolocronToolset/src/toolset/*.py" = [
  "A001",
  "FBT003",
  "N802",
  "N803",
  "N806"
]
"Tools/HolocronToolset/src/toolset/uic/*.py" = ["ALL"]
"Libraries/bioware-kaitai-formats/src/bioware_kaitai_formats/*.py" = ["ALL"]
"__init__.py" = ["F401", "I001", "I002", "TID252"]
"globalsettings.py" = ["F401", "I001"]
"pykotor/resource/formats/ncs/compiler/*.py" = ["ALL"]
"resources_rc.py" = ["ALL"]
"tests/results" = ["ALL"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 200

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = false

[tool.style]
based_on_style = "google"
split_arguments_when_comma_terminated = true
split_before_named_assigns = true
split_complex_comprehension = true

[tool.yapf]
ALLOW_SPLIT_BEFORE_DEFAULT_OR_NAMED_ASSIGNS = false
ALLOW_SPLIT_BEFORE_DICT_VALUE = false
DISABLE_SPLIT_LIST_WITH_COMMENT = true
INDENT_DICTIONARY_VALUE = true
column_limit = 175
join_multiple_lines = false
no_spaces_around_selected_binary_operators = "*,/"
split_before_dict_set_generator = true
split_before_expression_after_opening_paren = false
split_complex_comprehension = true
split_penalty_after_opening_bracket = 50
split_penalty_excess_character = 75 # Lower penalty for going over the column limit
split_penalty_for_added_line_split = 100 # Discourage adding new line splits
